feat: refactoring comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ project(IMS_Project)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(IMS_Project
-        main.cpp)
+        main.cpp constants.h)
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} m simlib)
